<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FakePanicResponder</string>
    <string name="config_button">Config…</string>
    <string name="connect_button">Done</string>
    <string name="cancel_button">Back</string>
    <string name="choose_panic_trigger">Choose panic trigger</string>
    <string name="none">None</string>
    <string name="default_">Default</string>
    <string name="lock_and_exit">Lock and Exit</string>
    <string name="clear_app_data">Clear all data within the app</string>
    <string name="uninstall_this_app">Uninstall This App</string>
    <string name="launches_since_last_clear">Launches since this app had all data cleared:</string>

</resources>