<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_launcher"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/configButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/config_button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/choose_panic_trigger"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/choosePanicTriggerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:padding="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

</LinearLayout>