<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel_button"
            style="?metaButtonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_launcher"
            android:gravity="center"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/connect_button"
            style="?metaButtonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/connect_button" />
    </LinearLayout>

    <LinearLayout
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/show_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_toast" />

        <CheckBox
            android:id="@+id/uninstall_this_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uninstall_this_app" />

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="true"
            android:textColor="#33b5e5"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>